# Challenge-CyberSecu-SISE

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUIDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  state.py
app/pages/: analysis.py  data_browser.py  data_upload.py  dim_reduction.py  feature_engineering.py  flow_analysis.py  ip_visualization.py  llm_assistant.py  model_training.py  predictions.py  statistics.py
config/: settings.yaml
core/: __init__.py  config.py  exceptions.py  interfaces.py
data/raw/: _licites_services (1).csv  test.csv
docs/: analysis_report.html
evaluation/: __init__.py  comparison.py  metrics.py  visualizations.py
features/: __init__.py  aggregators.py  extractors.py  store.py  transformers.py
models/: __init__.py  anomaly.py  classifiers.py  clustering.py  io.py  pipeline.py  registry.py
notebooks/: 00_transform_csv_data.ipynb  00_transform_raw_data.ipynb  analysis_report.ipynb
parsers/: __init__.py  base.py  factory.py  firewall.py  generic.py  kernel_firewall.py  syslog.py
services/: __init__.py  data_service.py  evaluation_service.py  feature_service.py  model_service.py
utils/: __init__.py  helpers.py  io.py
